--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: system-ui, sans-serif;
   margin: 0;
   padding: 2rem;
-  background: #f9f9f9;
+  background: #fdf6e3;
   color: #333;
 }
 
@@ -12,11 +12,11 @@ header {
 }
 
 article {
-  background: white;
+  background: #fffdf6;
   padding: 1.5rem;
   border-radius: 8px;
   margin-bottom: 2rem;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 6px rgba(0,0,0,0.25);
 }
 
 article h2 {
@@ -38,4 +38,11 @@ img {
 figcaption {
   font-size: 12px;
   font-style: italic;
+  margin-bottom: 20px
+}
+
+pre {
+  white-space: pre-wrap;
+  background-color: #fdf6e3;
+  display: block;
 }
