--- a/style.css
+++ b/style.css
@@ -88,3 +88,10 @@ h1 {
       border-left: 4px solid #3b82f6;
       margin: 1.5rem 0;
 }
+
+.post-list {
+    margin-bottom: 0;
+    margin-top: 0;
+    padding-bottom: 10px;
+    padding-top: 0;
+}
