Article #16 I Don't Care About Beans

--- a/style.css
+++ b/style.css
@@ -211,3 +211,11 @@ ol.culture-steps li strong {
 p:has(+ .tight-list) {
     margin-bottom: 0.25em;
 }
+
+.tight-header {
+  margin-bottom: 0.1em;
+}
+
+.tight-paragraph {
+  margin-top: 0
+}
